--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack serve",
     "build": "webpack",
+    "lhci": "lhci autorun",
     "prettier": "npx prettier --write 'src/**/*.{tsx,ts,css,html,json}'"
   },
   "repository": {
@@ -40,6 +41,7 @@
     "@emotion/css": "^11.9.0",
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
+    "@lhci/cli": "^0.9.0",
     "@trivago/prettier-plugin-sort-imports": "^3.2.0",
     "@types/node": "^18.0.0",
     "@types/react": "^18.0.14",
