--- a/.github/workflows/lightouse-ci.yaml
+++ b/.github/workflows/lightouse-ci.yaml
@@ -14,7 +14,7 @@ jobs:
         run: |
           npm ci
       - name: run build
-        run: npm run build-nextjs
+        run: npm run build
       - name: run Lighthouse CI
         env:
           LHCI_GITHUB_APP_TOKEN: ${{ secrets.LHCI_GITHUB_APP_TOKEN }}
