--- a/.github/workflows/lightouse-ci.yaml
+++ b/.github/workflows/lightouse-ci.yaml
@@ -32,7 +32,7 @@ jobs:
         id: format_lighthouse_score
         uses: actions/github-script@v3
         with:
-          github-token: ${{secrets.LHCI_TOKEN}}
+          LHCI_TOKEN: ${{secrets.LHCI_TOKEN}}
           script: |
 
             const fs = require('fs');
@@ -81,6 +81,6 @@ jobs:
       - name: comment PR
         uses: unsplash/comment-on-pr@v1.3.0
         env:
-          GITHUB_TOKEN: ${{ secrets.LHCI_TOKEN }}
+          LHCI_TOKEN: ${{ secrets.LHCI_TOKEN }}
         with:
           msg: ${{ steps.format_lighthouse_score.outputs.comments}}
