--- a/.github/workflows/lightouse-ci.yaml
+++ b/.github/workflows/lightouse-ci.yaml
@@ -41,8 +41,7 @@ jobs:
             # comment를 담을 변수 입니다.
             let comments = "";
 
-            results.forEach((result) => 
-            {
+            results.forEach((result) => {
               const { summary, jsonPath } = result;
               const { audits } = details;
 
@@ -56,8 +55,7 @@ jobs:
               # 점수가 색상으로 구분되는 방식 (https://web.dev/performance-scoring/#color-coding)
               const score = (res) => (res >= 90 ? "🟢" : res >= 50 ? "🟠" : "🔴");
 
-              const comment = 
-              [
+              const comment = [
                 `⚡️ Lighthouse report!`,
                 `| Category | Score |`,
                 `| --- | --- |`,
@@ -65,8 +63,7 @@ jobs:
                 { ... }
               ].join("\n");
 
-              const detail = 
-              [
+              const detail = [
                 `| Category | Score |`,
                 `| --- | --- |`,
                 `| ${score(
