--- a/.github/workflows/lightouse-ci.yaml
+++ b/.github/workflows/lightouse-ci.yaml
@@ -33,7 +33,7 @@ jobs:
           npm install -g @lhci/cli
           lhci autorun || echo "LHCI failed!"
 
-      - name: Format lighthouse score
+      - name: Format lighthouse score1
         id: format_lighthouse_score
         uses: actions/github-script@v3
         with:
@@ -42,6 +42,104 @@ jobs:
             const fs = require('fs');
             # 본인의 환경에 맞게 설정해주세요
             const results = JSON.parse(fs.readFileSync("/home/runner/work/lighthouse-ci-tutorial/lighthouse-ci-tutorial/lhci_reports/manifest.json"));
+            # comment를 담을 변수 입니다.
+            let comments = "";
+
+            results.forEach((result) => {
+              const { summary, jsonPath } = result;
+              const { audits } = details;
+
+              const details = JSON.parse(fs.readFileSync(jsonPath));
+              const formatResult = (res) => Math.round(res * 100);
+
+              Object.keys(summary).forEach(
+                (key) => (summary[key] = formatResult(summary[key]))
+              );
+
+              # 점수가 색상으로 구분되는 방식 (https://web.dev/performance-scoring/#color-coding)
+              const score = (res) => (res >= 90 ? "🟢" : res >= 50 ? "🟠" : "🔴");
+
+              const comment = [
+                `⚡️ Lighthouse report!`,
+                `| Category | Score |`,
+                `| --- | --- |`,
+                `| ${score(summary.performance)} Performance | ${summary.performance} |`,
+                { ... }
+              ].join("\n");
+
+              const detail = [
+                `| Category | Score |`,
+                `| --- | --- |`,
+                `| ${score(
+                  audits["first-contentful-paint"].score * 100
+                )} First Contentful Paint | ${
+                  audits["first-contentful-paint"].displayValue
+                } |`,
+                { ... }
+              ].join("\n");
+              comments += comment + "\n" + detail + "\n";
+            });
+            # comments 변수의 값을 다음 job으로 넘겨줍니다.
+            core.setOutput('comments', comments)
+        
+        - name: Format lighthouse score2
+        id: format_lighthouse_score
+        uses: actions/github-script
+        with:
+          github-token: ${{secrets.GITHUB_TOKEN}}
+          script: |
+            const fs = require('fs');
+            # 본인의 환경에 맞게 설정해주세요
+            const results = JSON.parse(fs.readFileSync("/home/runner/work/lighthouse-ci-tutorial/lighthouse-ci-tutorial/lhci_reports/manifest.json"));
+            # comment를 담을 변수 입니다.
+            let comments = "";
+
+            results.forEach((result) => {
+              const { summary, jsonPath } = result;
+              const { audits } = details;
+
+              const details = JSON.parse(fs.readFileSync(jsonPath));
+              const formatResult = (res) => Math.round(res * 100);
+
+              Object.keys(summary).forEach(
+                (key) => (summary[key] = formatResult(summary[key]))
+              );
+
+              # 점수가 색상으로 구분되는 방식 (https://web.dev/performance-scoring/#color-coding)
+              const score = (res) => (res >= 90 ? "🟢" : res >= 50 ? "🟠" : "🔴");
+
+              const comment = [
+                `⚡️ Lighthouse report!`,
+                `| Category | Score |`,
+                `| --- | --- |`,
+                `| ${score(summary.performance)} Performance | ${summary.performance} |`,
+                { ... }
+              ].join("\n");
+
+              const detail = [
+                `| Category | Score |`,
+                `| --- | --- |`,
+                `| ${score(
+                  audits["first-contentful-paint"].score * 100
+                )} First Contentful Paint | ${
+                  audits["first-contentful-paint"].displayValue
+                } |`,
+                { ... }
+              ].join("\n");
+              comments += comment + "\n" + detail + "\n";
+            });
+            # comments 변수의 값을 다음 job으로 넘겨줍니다.
+            core.setOutput('comments', comments)
+
+        - name: Format lighthouse score3
+        id: format_lighthouse_score
+        uses: actions/github-script
+        with:
+          github-token: ${{secrets.GITHUB_TOKEN}}
+          script: |
+            const fs = require('fs');
+            # 본인의 환경에 맞게 설정해주세요
+            const results = JSON.parse(fs.readFileSync("../lhci_reports/manifest.json"));
             # comment를 담을 변수 입니다.
             let comments = "";
 
