--- a/.github/workflows/lightouse-ci.yaml
+++ b/.github/workflows/lightouse-ci.yaml
@@ -40,12 +40,12 @@ jobs:
           github-token: ${{secrets.GITHUB_TOKEN}}
           script: |
 
-            const fs = require('fs');
+            # const fs = require('fs');
             # 본인의 환경에 맞게 설정해주세요
             # const results = JSON.parse(fs.readFileSync("../lhci_reports/manifest.json"));
             # comment를 담을 변수 입니다.
             let comments = "coke";
-
+            console.log('coke coke')
             # results.forEach((result) => {
             #   const { summary, jsonPath } = result;
             #   const { audits } = details;
