--- a/.github/workflows/lightouse-ci.yaml
+++ b/.github/workflows/lightouse-ci.yaml
@@ -26,23 +26,23 @@ jobs:
         run: |
           npm run build
 
-      - name: Run Lighthouse CI
-        env:
-          LHCI_GITHUB_APP_TOKEN: ${{ secrets.LHCI_GITHUB_APP_TOKEN }}
-        run: |
-          npm install -g @lhci/cli
-          lhci autorun || echo "LHCI failed!"
+      # - name: Run Lighthouse CI
+      #   env:
+      #     LHCI_GITHUB_APP_TOKEN: ${{ secrets.LHCI_GITHUB_APP_TOKEN }}
+      #   run: |
+      #     npm install -g @lhci/cli
+      #     lhci autorun || echo "LHCI failed!"
 
       - name: Format lighthouse score
         id: format_lighthouse_score
         uses: actions/github-script@v3
         with:
-          github-token: ${{secrets.GITHUB_TOKEN}}
+          github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
 
             # const fs = require('fs');
             # 본인의 환경에 맞게 설정해주세요
-            # const results = JSON.parse(fs.readFileSync("../lhci_reports/manifest.json"));
+            # const results = JSON.parse(fs.readFileSync('${{ github.workspace }}/lhci_reports/manifest.json'));
             # comment를 담을 변수 입니다.
             let comments = "coke";
             console.log('coke coke')
