--- a/.github/workflows/lightouse-ci.yaml
+++ b/.github/workflows/lightouse-ci.yaml
@@ -37,6 +37,6 @@ jobs:
         id: format_lighthouse_score
         uses: actions/github-script@v3
         with:
-          github-token: ${{ secrets.LHCI_TOKEN }}
+          github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
             console.log('coke')
