--- a/.github/workflows/lightouse-ci.yaml
+++ b/.github/workflows/lightouse-ci.yaml
@@ -39,4 +39,5 @@ jobs:
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
-            console.log('coke')
+            const fs = require('fs');
+            console.log('coke');
