--- a/.github/workflows/lightouse-ci.yaml
+++ b/.github/workflows/lightouse-ci.yaml
@@ -55,6 +55,7 @@ jobs:
                 (key) => (summary[key] = formatResult(summary[key]))
               );
 
-              console.log('formatResult',formatResult);
+              const score = (res) => (res >= 90 ? "🟢" : res >= 50 ? "🟠" : "🔴");
+              console.log('summary',summary);
 
             });
