--- a/.github/workflows/lightouse-ci.yaml
+++ b/.github/workflows/lightouse-ci.yaml
@@ -43,7 +43,7 @@ jobs:
             const results = JSON.parse(fs.readFileSync('${{ github.workspace }}/lhci_reports/manifest.json'));
             let comments = "";
 
-            results.forEach((result) => {
+            results[0].forEach((result) => {
               const { summary, jsonPath } = result;
 
               const details = JSON.parse(fs.readFileSync(jsonPath));
@@ -54,32 +54,33 @@ jobs:
               Object.keys(summary).forEach(
                 (key) => (summary[key] = formatResult(summary[key]))
               );
+
+              const score = (res) => (res >= 90 ? "🟢" : res >= 50 ? "🟠" : "🔴");
+
+              const comment = [
+                `⚡️ Lighthouse report!`,
+                `| Category | Score |`,
+                `| --- | --- |`,
+                `| ${score(summary.performance)} Performance | ${summary.performance} |`
+              ].join("\n");
+
+              const detail = [
+                `| Category | Score |`,
+                `| --- | --- |`,
+                `| ${score(
+                  audits["first-contentful-paint"].score * 100
+                )} First Contentful Paint | ${
+                  audits["first-contentful-paint"].displayValue
+                } |`
+              ].join("\n");
+
+              comments += comment + "\n" + detail + "\n";
+
+              console.log('comment',comment);
+              console.log('detail',detail);
+              console.log('comments',comments);
+
             });
-
-            const score = (res) => (res >= 90 ? "🟢" : res >= 50 ? "🟠" : "🔴");
-
-            const comment = [
-              `⚡️ Lighthouse report!`,
-              `| Category | Score |`,
-              `| --- | --- |`,
-              `| ${score(summary.performance)} Performance | ${summary.performance} |`
-            ].join("\n");
-
-            const detail = [
-              `| Category | Score |`,
-              `| --- | --- |`,
-              `| ${score(
-                audits["first-contentful-paint"].score * 100
-              )} First Contentful Paint | ${
-                audits["first-contentful-paint"].displayValue
-              } |`
-            ].join("\n");
-
-            comments += comment + "\n" + detail + "\n";
-
-            console.log('comment',comment);
-            console.log('detail',detail);
-            console.log('comments',comments);
             core.setOutput('comments', comments);
 
       - name: comment PR
