--- a/.github/workflows/lightouse-ci.yaml
+++ b/.github/workflows/lightouse-ci.yaml
@@ -73,15 +73,34 @@ jobs:
               `| Category | Score |`,
               `| --- | --- |`,
               `| ${score(
-                audits["first-contentful-paint"].score * 100
+                audits[`first-contentful-paint`].score * 100
               )} First Contentful Paint | ${
-                audits["first-contentful-paint"].displayValue
+                audits[`first-contentful-paint`].displayValue
+              } |`,
+              `| ${score(
+                audits[`speed-index`].score * 100
+              )} Speed Index | ${
+                audits[`speed-index`].displayValue
+              } |`,
+              `| ${score(
+                audits[`total-blocking-time`].score * 100
+              )} Total Blocking Time | ${
+                audits[`total-blocking-time`].displayValue
+              } |`,
+              `| ${score(
+                audits[`largest-contentful-paint`].score * 100
+              )} Largest Contentful Paint | ${
+                audits[`largest-contentful-paint`].displayValue
+              } |`,
+              `| ${score(
+                audits[`cumulative-layout-shift`].score * 100
+              )} Cumulative Layout Shift | ${
+                audits[`cumulative-layout-shift`].displayValue
               } |`
             ].join("\n");
 
             comments += comment + "\n" + detail + "\n";
 
-            console.log('audits',audits);
             core.setOutput('comments', comments);
 
       - name: comment PR
